fix: Change mobile menu align

--- a/src/assets/styles/blocks/menu__mobile.sass
+++ b/src/assets/styles/blocks/menu__mobile.sass
@@ -61,8 +61,7 @@
         width: 100%
         border-bottom: 1px solid rgba(0,0,0,.1)
         position: relative
-        text-align: left
-        padding-left: 10px
+        text-align: center
         a
             text-decoration: none
             color: black
@@ -111,7 +110,7 @@
     border-top: 1px solid #f2f2f2
 
     .extramenu__items
-        text-align: left
+        text-align: center
         border-bottom: 1px solid rgba(0,0,0,.1)
         padding: 7px 0
         &:last-child
@@ -124,7 +123,7 @@
         
         
 .extramenu__btn
-    text-align: left
+    text-align: center
     width: 100%
     font-size: 14pt
     font-family: "Roboto-md"
@@ -134,18 +133,18 @@
     padding: 0
 
     &::after
-                     content: ""
-                     display: block
-                     position: absolute
-                     top: 50%
-                     right: 5px
-                     width: 0
-                     height: 0
-                     border-top: 4px solid black
-                     border-bottom: 0 solid black
-                     border-left: 4px solid transparent
-                     border-right: 4px solid transparent
-                     transition:border-bottom .1s, border-top .1s .1s
+        content: ""
+        display: block
+        position: absolute
+        top: 50%
+        right: 5px
+        width: 0
+        height: 0
+        border-top: 4px solid black
+        border-bottom: 0 solid black
+        border-left: 4px solid transparent
+        border-right: 4px solid transparent
+        transition:border-bottom .1s, border-top .1s .1s
             
 .extramenu__btn_active
 
